--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer base {
+  @font-face {
+    font-family: Catalina-Rayden;
+    font-weight: 400;
+    src: url("./assets/fonts/Catalina Rayden.ttf");
+  }
+
+  @font-face {
+    font-family: Montserrat-Medium;
+    font-weight: 400;
+    src: url("./assets/fonts/Montserrat-Medium.ttf");
+  }
+
+  @font-face {
+    font-family: Montserrat-Bold;
+    font-weight: 400;
+    src: url("./assets/fonts/Montserrat-Bold.ttf");
+  }
+
+  @font-face {
+    font-family: Montserrat-SemiBold;
+    font-weight: 400;
+    src: url("./assets/fonts/Montserrat-SemiBold.ttf");
+  }
+
+  @font-face {
+    font-family: Montserrat-Regular;
+    font-weight: 400;
+    src: url("./assets/fonts/Montserrat-Regular.ttf");
+  }
+
+  html {
+    font-size: 62.5%;
+  }
+
+  body {
+    margin: 0;
+    color: #333333;
+    font-family: Montserrat-Regular;
+  }
+
+  .btn-primary {
+    @apply font-primary px-[2.4rem]  py-[1.9rem] rounded-[10px] text-center w-full text-white bg-secondary;
+  }
+
+  .btn-secondary {
+    @apply rounded-[10px] font-primary px-[2.4rem] py-[1.9rem] text-center w-full text-white bg-tertiary;
+  }
 }
